changes for the merge